styles.css
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap');


/* 
# --------------------
# Main HTML body 
# -------------------- 
*/

html {
    scrollbar-gutter: stable overlay;
    overflow-y: scroll;
    min-width: var(--content-min-width);
}

body {
    /* font-family: "Lato", sans-serif; */
    font-family: 'Merriweather', Georgia, serif;
    color: #333;
    line-height: 1.6;
    transition: margin-left .5s;
    margin: 0px;
    padding: 0px;
    min-width: var(--content-min-width);
}

h1, h2, h3, h4 {
    font-family: "Fira Sans", Helvetica, Arial, sans-serif;
    font-weight: bold;
}

h3 {
    color: var(--sidebar-purple)
}

a {
    color: var(--sidebar-purple);
}

a:hover {
    color: var(--hnn-purple);
  }

#main {
    transition: margin-left 0.5s;
    padding: 0px;
    margin: 0px;
    display: flex;
    flex-direction: column;
    align-items: center;
}

#logo-wrapper {
    width: 100%;
    max-width: 300px;
    padding: 0 0px;
    display: flex;
    flex-direction: column;
    align-items: center;
    margin: 0 auto; /* centers horizontally */
}

#logo-wrapper p {
    font-family: 'PT Sans Narrow', sans-serif !important;
    font-size: 22.5px !important;
    font-weight: normal !important;
    margin: 5px 0px !important;
}

#logo-subtitle p {
    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Noto Sans", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji" !important;
    font-weight: normal !important;
    text-align: center !important;
    color: #636363 !important;
    font-size: 23px !important;
    line-height: 1.2 !important;
    margin: 15px !important;
}

#content-wrapper {
    width: 100%;
    max-width: var(--content-max-width);
    padding: 0px 15px;
    box-sizing: border-box;
    /* margin: 0 auto; */
    margin-top: var(--topbar-height);
}

#content {
    padding: 10px 0px;
    width: 100%;
    font-size: 20px;

}

#content p {
    font-family: 'Merriweather', Georgia, serif;
    display: block;
    color: #333;
    font-size: inherit;
    padding: 0px;
    line-height: 1.6;
    overflow-wrap: break-word; 
    word-wrap: break-word;
    white-space: normal;
}

#content img {
    max-width: 100%;
    height: auto;
    display: block;
    margin: 0 auto;
}

/* Inline code (single backtick) */
code {
    color: var(--sidebar-purple);
    background-color: #f6f8fa;
    display: inline;
    padding: 0.2em 0.4em;
    border-radius: 6px;
    font-size: 85%;
    font-family: 'SFMono-Regular', Consolas, 'Liberation Mono', Menlo, Courier, monospace; 
    font-weight: normal;
    border: 1px solid #e1e4e8;
  }
  
  /* Block code (triple backticks) */
  pre code {
    color: #24292e;
    background-color: #f6f8fa;
    display: block;
    padding: 16px;
    overflow-x: auto;
    border-radius: 6px;
    font-size: 85%;
    font-family: 'SFMono-Regular', Consolas, 'Liberation Mono', Menlo, Courier, monospace;
    border: 1px solid #e1e4e8; /* Consistent border style */
  }


/* 
# --------------------
# Topbar
# -------------------- 
*/

.topbar {
    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Noto Sans", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
    background-color: #fff;
    height: var(--topbar-height);
    display: flex;
    align-items: center;
    padding: 0 0px;
    width: 100%;
    min-width: var(--content-min-width);
    flex-direction: column;
    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1); /* Subtle drop shadow */
    position: fixed;
    z-index: 9999;
}

#topbar-wrapper {
    height: var(--topbar-height);
    display: flex;
    align-items: center;
    justify-content: space-between; /* Push links to left and dropdown/socials to right */
    padding: 0 20px;
    width: 100%;
    max-width: calc(var(--content-max-width) + (var(--content-max-width) * 0.2));
    min-width: var(--content-min-width);
    box-sizing: border-box;
}

.links {
    display: flex;
    align-items: center;
}

/* Left links (Install, Tutorials, etc.) */
.links a {
    color: grey;
    font-size: 17px;
    padding: 0px 10px;
    text-decoration: none;
    display: inline-flex;
    align-items: center;

}

.links a:hover {
    color: var(--sidebar-purple);
    /* transition: transform 0.3s ease;
    transform: scale(1.05); */
    text-decoration: underline;
    text-underline-offset: 10px;
    text-decoration-thickness: 3px;
}

.home-link {
    display: inline-flex;
    text-decoration: none;
    height: inherit;
    padding: 0px;
    align-items: center;
}

.home-icon-container {
    height: inherit;
    align-items: center;
    position: relative;
    display: inline-flex;
    justify-content: center;

}

.home-icon {
    fill: grey;
    height: 22px;
    width: auto;
    transition: transform 0.3s ease;
}

.home-icon:hover {
    /* transform: scale(1.05); */
    fill: var(--sidebar-purple);
}

/* add underline to home icon */
.home-icon-container:hover::after {
    content: "";
    position: absolute;
    left: 0;
    right: 0;
    bottom: -9px; /* matches text-underline-offset: 10px */
    height: 3px;
    background-color: var(--sidebar-purple);
}

/* Right section for dropdown and social icons */
.topbar-right {
    display: flex;
    align-items: center;
    gap: 0px; /* Space between dropdown and social icons */
    margin-right: 10px;
    padding-left: 30px;
}

/* Style for "More" dropdown button */
.dropdown {
    height: inherit;
    align-items: center;
    position: relative;
    display: inline-flex;
    font-size: 17px;
    cursor: pointer;
    background: none;
    color: grey;
    margin: 0px 10px;
}

.dropdown-button {
    all: unset;
    display: flex;
    align-items: center;
    justify-content: center;
    cursor: pointer;
    padding: 0px 10px;
    border: 2px solid var(--icon-base);
    border-radius: 15px;
    /* transition: box-shadow 0.3s ease; */
    transition: box-shadow;
}
/* ... */

